@@ -20,7 +20,6 @@ import org.springframework.transaction.annotation.EnableTransactionManagement;
 import org.springframework.transaction.support.TransactionTemplate;
 import org.testcontainers.containers.GenericContainer;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -36,7 +35,7 @@ public class BlockingTestConfig extends AbstractAerospikeDataConfiguration {
 
     @Override
     protected List<Object> customConverters() {
-        return Arrays.asList(
+        return List.of(
             SampleClasses.CompositeKey.CompositeKeyToStringConverter.INSTANCE,
             SampleClasses.CompositeKey.StringToCompositeKeyConverter.INSTANCE
         );
